--- a/application/app2/views/index.ejs
+++ b/application/app2/views/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Copyright Protection</title>
+  <title>Copyright Protection - 한국저작권위원회</title>
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
@@ -182,7 +182,7 @@
                   <div class="form-group floating-label-form-group controls mb-5 pb-2">
                     <label>저작권 번호</label>
                     <input class="form-control text-center" id="txtCopyrightNo" type="text"
-                      placeholder="Copyright Number" required="required"
+                      placeholder="저작권 번호" required="required"
                       data-validation-required-message="저작권 번호를 입력해주세요." />
                     <p class="help-block text-danger"></p>
                   </div>
